--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -84,6 +84,16 @@
             <artifactId>httpclient</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Test resources-->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
