--- a/lgtm.yml
+++ b/lgtm.yml
@@ -4,3 +4,7 @@ extraction:
       java_version: "11"
       maven:
         settings_file: src/main/resources/lgtm.settings.xml
+  javascript:
+    index:
+      filters:
+        - exclude: ig
