Remove enabled authentication for local.

--- a/dpc-api/src/main/resources/local.application.conf
+++ b/dpc-api/src/main/resources/local.application.conf
@@ -29,6 +29,6 @@ dpc.api {
 
     attributionURL = "http://attribution:8080/v1/"
     exportPath = /app/data
-    authenticationDisabled = false
+    authenticationDisabled = true
     keyPairLocation = "/bakery_keypair.json"
 }
