DPC-439: Checksum and file lengths are wired in to the Data Resource and Job Resource.
I think things are working correctly, but it looks like the content length size is a bit wonky, I think it's because Jersey is resetting the values.

--- a/dpc-queue/pom.xml
+++ b/dpc-queue/pom.xml
@@ -71,4 +71,32 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>5.4.2.Final</version>
+                        </annotationProcessorPath>
+                        <path>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.3.0</version>
+                        </path>
+                        <path>
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                            <version>1.3.1</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
