DPC-849: Update Smoke Tests to stagger launch and throw errors
Updated the smoke tests to be ramp up execution, to hopefully catch more threading issues

Submission is now resource by resource, rather than submitting and entire bundle at once.

Moved some of the error handling up to the root level.

--- a/src/test/smoke_test.yml
+++ b/src/test/smoke_test.yml
@@ -2,9 +2,10 @@ settings:
   artifacts-dir: bzt-out/%Y-%m-%d_%H-%M-%S.%f
 
 execution:
-  - iterations: 1
-    concurrency: 3
+  - iterations: 3
+    concurrency: 10
     scenario: jmeter
+    ramp-up: 120s
 
 scenarios:
   jmeter:
