--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -100,12 +100,12 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.64</version>
+            <version>${bouncey.version}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.64</version>
+            <version>${bouncey.version}</version>
         </dependency>
         <!--        Validations use the R4 validator, even for STU3 resources-->
         <dependency>
