--- a/dpc-smoketest/pom.xml
+++ b/dpc-smoketest/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>${bouncey.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
