--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <jacoco.version>0.8.5</jacoco.version>
         <jooq.version>3.12.1</jooq.version>
+        <bouncey.version>1.64</bouncey.version>
     </properties>
 
     <developers>
