--- a/src/test/smoke_test.yml
+++ b/src/test/smoke_test.yml
@@ -2,7 +2,7 @@ settings:
   artifacts-dir: bzt-out/%Y-%m-%d_%H-%M-%S.%f
 
 execution:
-  - iterations: 3
+  - iterations: 1
     concurrency: 3
     scenario: jmeter
     ramp-up: 60s
@@ -15,6 +15,10 @@ scenarios:
       seed-file: ${SEED_FILE}
       provider-bundle: ${PROVIDER_BUNDLE}
       patient-bundle: ${PATIENT_BUNDLE}
+      organization-id: ""
+      client-token: ""
+      private-key: ""
+      key-id: ""
     script: src/main/resources/SmokeTest.jmx
 
 reporting:
