--- a/pom.xml
+++ b/pom.xml
@@ -330,7 +330,7 @@
                                     <compilerArgs>
                                         <arg>-XDcompilePolicy=simple</arg>
                                         <!--All ErrorProne configuration options need to be included in a single arg line-->
-                                        <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/target/generated-sources/.*</arg>
+                                        <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/target/generated-sources/.* -Xep:RemoveUnusedImports:ERROR</arg>
                                         <!-- Tell ErrorProne to ignore checking for processed annotations-->
                                         <arg>-Xlint:all,-processing</arg>
                                         <arg>-Werror</arg>
