--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -145,6 +145,10 @@
             <version>2.8.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+		</dependency>
+        <dependency>
             <groupId>com.newrelic.agent.java</groupId>
             <artifactId>newrelic-java</artifactId>
             <version>${newrelic.agent.version}</version>
