--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
                 <version>1.3.1</version>
             </dependency>
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>28.1-jre</version>
+            </dependency>
+            <dependency>
                 <groupId>com.newrelic.agent.java</groupId>
                 <artifactId>newrelic-java</artifactId>
                 <version>${newrelic.agent.version}</version>
