--- a/dpc-consent/src/main/resources/ci.application.conf
+++ b/dpc-consent/src/main/resources/ci.application.conf
@@ -1,23 +1,8 @@
 include "application.conf"
+include "server-ci.conf"
 
-logging {
-    level = ERROR
-    loggers {
-        "liquibase" = WARN
-        "org.hibernate.SQL" = WARN
-    }
-}
-
+# server-ci.conf gets included twice, once under the namespace, once not
+# Not all tests utilize the configuration namespace, so this ensures our logging settings apply to all tests
 dpc.consent {
-
-  server.requestLog.appenders = []
-
-  logging {
-    level = ERROR
-    loggers {
-      "liquibase" = WARN
-      "org.hibernate.SQL" = WARN
-    }
-  }
-
+    include "server-ci.conf"
 }
