--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
-            <artifactId>hapi-fhir-base</artifactId>
+            <artifactId>hapi-fhir-client</artifactId>
         </dependency>
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
