DPC-961: Change Docker default to always enable auth.
Per one of our discussions with the web team, we'd like to change the defaults to always launch the application with auth enabled.

This updates both the docker-compose.yml and the dpc-test.sh to ensure auth is disabled when running the postman tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - ENV=local
       - JACOCO=${REPORT_COVERAGE}
       - exportPath=/app/data
-      - JVM_FLAGS=-Ddpc.api.authenticationDisabled=${AUTH_DISABLED:-true}
+      - JVM_FLAGS=-Ddpc.api.authenticationDisabled=${AUTH_DISABLED:-false}
     depends_on:
       - attribution
     volumes:
