--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -50,9 +50,14 @@ logging {
       type = json
       timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
     }
+
+    # Prevent log entries from being dropped under all circumstances
+    # While nice from a performance standpoint, we must ensure full audit capability of the application
+    discardingThreshold = 0
   }]
-  loggers = {
-    "liquibase" = WARN
+
+  loggers {
+    "liquibase" = INFO
   }
 }
 
