--- a/dpc-web/docker-compose.yml
+++ b/dpc-web/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     image: dpc-web:latest
     environment:
       - DATABASE_URL=postgresql://db/dpc-website_development
+      - TEST_DATABASE_URL=postgresql://db/dpc-website_test
       - DB_USER=postgres
       - DB_PASS=dpc-safe
       - DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL=true
