--- a/dpc-web/config/database.yml
+++ b/dpc-web/config/database.yml
@@ -64,7 +64,7 @@ test:
   # The password associated with the postgres role (username).
   password: <%= ENV.fetch("DB_PASS", nil) %>
 
-  url: <%= ENV.fetch("DATABASE_URL", "postgresql://localhost/dpc-website_test") %>
+  url: <%= ENV.fetch("TEST_DATABASE_URL", "postgresql://localhost/dpc-website_test") %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
