--- a/dpc-bluebutton/pom.xml
+++ b/dpc-bluebutton/pom.xml
@@ -70,6 +70,11 @@
           <version>0.4.0-SNAPSHOT</version>
           <scope>compile</scope>
        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncey.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
