--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <email>ronald.k.heft@omb.eop.gov</email>
             <organization>United States Digital Service</organization>
         </developer>
+        <developer>
+            <id>will</id>
+            <name>Will Huang</name>
+            <email>will.huang@adhocteam.us</email>
+            <organization>Ad Hoc LLC</organization>
+        </developer>
     </developers>
 
     <dependencyManagement>
